# web_hw10_gpt

./: .gitignore  db.sqlite3  pyproject.toml
app_auth/: urls.py  views.py
quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes/templatetags/: extract.py
root/: settings.py  urls.py
static/quotes/: style.css
templates/_layouts/: base.html
templates/app_auth/: login.html  logout.html  register.html
templates/quotes/: add_author.html  add_quote.html  author_detail.html  authors.html  index.html
utils/: add_quotes_to_mongo.py  authors.json  migration.py
